--- a/index.html
+++ b/index.html
@@ -2,14 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=\, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BMI-Index</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-
+    <h1>BMI-Index</h1>
+    <main>
+        <form>
+            <p>Height :</p><input type="text" id="height" required placeholder="In Centimeters"/>
+            <p>Weight :</p><input type="text" id="weight" required placeholder="In Kilograms"/>
+            <button  id="button" type="submit">Calculate</button>
+        </form>
+    </main>
     
+    <p id="ans"></p>
+<div>
+    <h2>BMI Weight Guide</h2>
+    <p>Under Weight = less than 18.6</p>
+    <p>Normal Range = 18.6 to 24.9</p>
+    <p>Over Weight = Greater than 24.9</p>
+</div>
+
+
     <script src="script.js"></script>
 </body>
 </html>
